货源列表数据请求限制

--- a/src/views/Person/_person.scss
+++ b/src/views/Person/_person.scss
@@ -199,6 +199,13 @@
       padding-left: 70px;
     }
   }
+  .person-logo {
+    width: 50px;
+    height: 50px;
+    background: #000 url(./logo.png) no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
 }
 .edit-tag {
   position: relative;
