feat: MyCargo页面与Cargo页面样式分开，才在MyCargo模块根节点添加mycargo类名, Cargo页面顶部空白1px

--- a/src/views/Cargo/_cargo.scss
+++ b/src/views/Cargo/_cargo.scss
@@ -2,9 +2,13 @@ body {
   // overflow: hidden;
 }
 .cargo {
+  // 微信顶部有1像素的空隙，hack
+  margin-top: -1px;
   .am-list {
-    // height: 600px;
-    // overflow: auto;
+    // background: #000;
+  }
+  .am-list-body {
+    // background: #000;
   }
   .am-list-header {
     display: none;
