--- a/src/views/Login/_login.scss
+++ b/src/views/Login/_login.scss
@@ -64,14 +64,23 @@
   }
   .am-list .am-list-item .am-input-label {
     line-height: 56px;
+    height: 56px;
   }
   .am-list .am-list-item .am-input-control {
     line-height: 56px;
+    height: 56px;
+    position: relative;
   }
   .am-list .am-list-item .am-input-control input {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    line-height: 20px;
+    // padding-top: 18px;
+    // padding-bottom: 18px;
+    // line-height: 56px;
+    position: absolute;
+    top: 0;
+    vertical-align: center;
+    height: 56px;
+    // padding-top: 18px;
+    line-height: 18px;
     &:focus, &:active {
       color: #000;
     }
