--- a/src/views/Person/_person.scss
+++ b/src/views/Person/_person.scss
@@ -1,4 +1,9 @@
 .person {
+  .am-list .am-list-body {
+    &:after {
+      border-bottom: none;
+    }
+  }
   .panel {
     display: -webkit-box;
     display: -webkit-flex;
@@ -9,7 +14,8 @@
     padding: 15px;
     position: relative;
     height: 70px;
-    background: #000;
+    background: #000 url(./person-img.png) no-repeat;
+    background-size: cover;
   }
   // .am-list-body {
   //   & > a {
@@ -91,16 +97,21 @@
   .tag-container {
     width: 100%;
     background: #fff;
-    margin-top: 15px;
+    // margin-top: 15px;
+    margin-bottom: 15px;
     border-top: 1px solid #d2d1cd;
     border-bottom: 1px solid #d2d1cd;
     padding: 17px;
+    padding-bottom: 5px;
+    &:first-child {
+      border-top: none;
+    }
   }
   .am-tag {
     border: 1px solid #a5a5a5;
     border-radius: 28px;
-    margin-right: 25px;
-    margin-bottom: 22px;
+    margin-right: 15px;
+    margin-bottom: 12px;
     font-size: 12px;
     width: auto;
     padding: 5px 10px;
@@ -116,10 +127,11 @@
   }
   .car-img {
     // height: 140px;
-    margin-left: 30px;
+    margin-left: 24px;
     border-bottom: 1px solid #ddd;
     & > p {
       color: #4b4b4b;
+      font-size: 16px;
       &.small {
         font-size: 12px;
       }
@@ -133,8 +145,6 @@
   .am-tag-active, .selected {
     border: 1px solid #ffa032;
     border-radius: 28px;
-    margin-right: 25px;
-    margin-bottom: 22px;
     font-size: 12px;
     width: auto;
     padding: 5px 10px;
@@ -165,7 +175,8 @@
     background: #fff;
   }
   .submit-btn {
-    margin-top: 50px;
+    margin-top: 30px;
+    border-radius: 25px;
   }
 
   // 编辑车牌
@@ -206,6 +217,11 @@
     background-position: center;
     background-size: cover;
   }
+
+  // 下划线
+  .underline {
+    padding-left: 0!important;
+  }
 }
 .edit-tag {
   position: relative;
@@ -238,4 +254,6 @@
     height: 38px;
     border: none;
   }
+
+
 }
