--- a/src/views/MyCargo/_myCargo.scss
+++ b/src/views/MyCargo/_myCargo.scss
@@ -64,16 +64,16 @@
     position: fixed;
     bottom: 24px;
     right: 24px;
-    width: 64px;
-    height: 64px;
-    border-radius: 64px;
+    width: 67px;
+    height: 67px;
+    border-radius: 67px;
     color: #fff;
-    text-align: center;
-    line-height: 64px;
-    font-size: 12px;
-    background: #56d586;
+    // text-align: center;
+    line-height: 67px;
+    background: url(./helper.png) no-repeat;
+    background-size: cover;
     -webkit-backface-visibility: hidden;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    // box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     /*--^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Most Important*/
   }
 }
