--- a/src/views/MyCargoDetail/_mycargoDetail.scss
+++ b/src/views/MyCargoDetail/_mycargoDetail.scss
@@ -20,10 +20,6 @@
       border-bottom: 1px solid #cfcfcf;
     }
   }
-  // .block {
-  //   background: #fff;
-  //   padding-bottom: 15px;
-  // }
   .order {
     background: #dad7d0;
     color: #000;
@@ -50,27 +46,48 @@
       bottom: 0;
     }
   }
-  .title {
+  .title-wrapper {
     position: relative;
-    padding-bottom: 14px;
-    color: #4c4c4c;
-    font-size: 18px;
-    margin-top: 0;
-    margin-bottom: 18px;
-    margin-left: 18px;
-    &:after {
+    .icon-project {
       position: absolute;
-      left: 0;
-      top: 0;
-      width: 200%;
-      height: 200%;
-      content: " ";
-      transform: scale(0.5);
-      transform-origin: 0 0;
-      border-bottom: 1px solid #cfcfcf;
+      left: 18px;
+      top: -1px;
+      width: 20px;
+      height: 20px;
+      background: url(./project.png) no-repeat;
+      background-size: cover;
+    }
+    .icon-info {
+      position: absolute;
+      left: 18px;
+      top: -1px;
+      width: 20px;
+      height: 20px;
+      background: url(./info.png) no-repeat;
+      background-size: cover;
+    }
+    .title {
+      position: relative;
+      padding-bottom: 14px;
+      color: #4c4c4c;
+      font-size: 18px;
+      margin-top: 0;
+      margin-left: 18px;
+      padding-left: 24px;
+      &:after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 200%;
+        height: 200%;
+        content: " ";
+        transform: scale(0.5);
+        transform-origin: 0 0;
+        border-bottom: 1px solid #cfcfcf;
+      }
     }
   }
-  .am-table {
+      .am-table {
     border: 1px solid #cfcfcf;
     border-bottom: none;
   }
@@ -112,6 +129,9 @@
   .people-info {
     padding-left: 30px;
     position: relative;
+    &>div {
+      font-size: 16px;
+    }
     .people-info-item {
       color: #5b5b5b;
     }
