feat: 样式调整，兼容性优化，测试机型: 华为note，一加2，三星

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -103,6 +103,7 @@ body {
   .am-list-item .am-list-line {
     min-height: 58px;
     height: 58px;
+    padding-right: 24px;
   }
   .am-list-item .am-list-line .am-list-content {
     font-size: 15px;
