--- a/src/views/CargoDetail/_cargoDetail.scss
+++ b/src/views/CargoDetail/_cargoDetail.scss
@@ -1,4 +1,5 @@
 .cargo-detail {
+  min-height: 100vh;
   background: #f9f8f4;
   padding-bottom: 30px;
   .info {
@@ -45,8 +46,8 @@
       position: absolute;
       left: 18px;
       top: -1px;
-      width: 20px;
-      height: 20px;
+      width: 22px;
+      height: 22px;
       background: url(./project.png) no-repeat;
       background-size: cover;
     }
@@ -102,7 +103,7 @@
   }
 
   .apply-for {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     border-radius: 0;
     color: #fff;
@@ -223,6 +224,10 @@
     min-width: 60px;
   }
   .am-input-control {
+    height: 20px;
+    line-height: 20px;
+    padding-top: 11px;
+    padding-bottom: 11px;
     & > input {
       border: none;
       text-align: right;
