--- a/src/views/MyCargoDetail/_mycargoDetail.scss
+++ b/src/views/MyCargoDetail/_mycargoDetail.scss
@@ -1,4 +1,5 @@
 .mycargo-detail {
+  min-height: 100vh;
   background: #f9f8f4;
   padding-bottom: 40px;
   .mycargo-content {
@@ -52,8 +53,8 @@
       position: absolute;
       left: 18px;
       top: -1px;
-      width: 20px;
-      height: 20px;
+      width: 22px;
+      height: 22px;
       background: url(./project.png) no-repeat;
       background-size: cover;
     }
@@ -61,8 +62,8 @@
       position: absolute;
       left: 18px;
       top: -1px;
-      width: 20px;
-      height: 20px;
+      width: 22px;
+      height: 22px;
       background: url(./info.png) no-repeat;
       background-size: cover;
     }
@@ -135,6 +136,12 @@
     .people-info-item {
       color: #5b5b5b;
     }
+    .load-address, .unload-address {
+      text-indent: 20px;
+      background: url(./location.png) no-repeat;
+      background-position: 0 0;
+      background-size: 14px 18px;
+    }
     .people-contact {
       display: block;
       width: 70px;
@@ -142,15 +149,18 @@
       line-height: 30px;
       text-align: center;
       color: #fff;
-      background: #27e6a0;
       border-radius: 30px;
-      padding-left: 10px;
+      padding-left: 20px;
       padding-right: 10px;
       padding-top: 0;
       padding-bottom: 0;
       margin-top: 10px;
+      margin-left: 20px;
       margin-bottom: 10px;
       font-size: 13px;
+      background: #27e6a0 url(./telephone.png) no-repeat;
+      background-position: 10px 6px;
+      background-size: 13px 18px;
     }
     .map-icon {
       position: absolute;
@@ -254,6 +264,7 @@
   }
 }
 .mycargo-offer {
+  min-width: 220px;
   padding: 18px 20px;
   .price {
     color: #fd6a12;
