--- a/src/views/Login/_login.scss
+++ b/src/views/Login/_login.scss
@@ -123,3 +123,13 @@
     }
   }
 }
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+  .login {
+    .login-bg {
+      height: 240px;
+    }
+  }
+}
