--- a/src/views/MyCargoDetail/_mycargoDetail.scss
+++ b/src/views/MyCargoDetail/_mycargoDetail.scss
@@ -135,12 +135,13 @@
     }
     .people-info-item {
       color: #5b5b5b;
+      padding-bottom: 12px;
     }
     .load-address, .unload-address {
       text-indent: 20px;
       background: url(./location.png) no-repeat;
-      background-position: 0 0;
-      background-size: 14px 18px;
+      background-position: 0 1px;
+      background-size: 12px 15px;
     }
     .people-contact {
       display: block;
