--- a/src/views/MyCargoDetail/_mycargoDetail.scss
+++ b/src/views/MyCargoDetail/_mycargoDetail.scss
@@ -15,6 +15,7 @@
       width: 200%;
       height: 200%;
       content: " ";
+      z-index: 0;
       transform: scale(0.5);
       transform-origin: 0 0;
       border-top: 1px solid #cfcfcf;
@@ -144,6 +145,8 @@
       background-size: 12px 15px;
     }
     .people-contact {
+      position: relative;
+      z-index: 10;
       display: block;
       width: 70px;
       height: 30px;
@@ -165,6 +168,7 @@
     }
     .map-icon {
       position: absolute;
+      z-index: 10;
       right: 20px;
       top: 0;
       & > img {
