feat: 付款弹出层样式

--- a/src/views/CargoDetail/_cargoDetail.scss
+++ b/src/views/CargoDetail/_cargoDetail.scss
@@ -218,6 +218,7 @@
     &.first {
       position: relative;
       border-bottom:1px solid #979797;
+      padding-right: 10px;
     }
   }
   .am-input-label {
