feat: 个人信息－图片上传样式修改

--- a/src/views/MyCargoDetail/_mycargoDetail.scss
+++ b/src/views/MyCargoDetail/_mycargoDetail.scss
@@ -232,17 +232,17 @@
     }
   }
 }
-.dropzone {
-  width: 100%;
-  height: 100px;
-}
+// .dropzone {
+//   width: 100%;
+//   height: 100px;
+// }
 .upload-img-wrapper {
   width: 100%;
 }
-.upload-img {
-  width: 100%;
-  height: 100px;
-}
+// .upload-img {
+//   width: 100%;
+//   height: 100px;
+// }
 .submit-btn {
   color: #ffaa26;
   width: 100%;
