--- a/src/views/Person/_person.scss
+++ b/src/views/Person/_person.scss
@@ -7,6 +7,14 @@
     height: 30px;
     line-height: 30px;
   }
+  .dropzone {
+    width: 100%;
+    max-height: 200px;
+  }
+  .upload-img {
+    width: 100%;
+    max-height: 200px;
+  }
   .am-list .am-list-body {
     &:after {
       border-bottom: none;
@@ -164,6 +172,7 @@
   }
   .submit-btn {
     margin-top: 30px;
+    margin-bottom: 10px;
     border-radius: 25px;
     background: #f9f8f4;
     // color:
@@ -247,5 +256,18 @@
     width: 75px;
     height: 38px;
     border: none;
+  }
+}
+@media only screen
+and (min-device-width : 320px)
+and (device-height: 568px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .person {
+    .dropzone {
+      max-height: 155px;
+    }
+    .upload-img {
+      max-height: 155px;
+    }
   }
 }
