feat: 车长车型选择样式

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -218,3 +218,9 @@ body {
 .am-modal-mask {
   background-color: rgba(0, 0, 0, 0.7)!important;
 }
+
+.am-picker-popup-body {
+  .am-picker-picker-item {
+    direction: ltr;
+  }
+}
