feat: 订单详情status < 99提示

--- a/src/views/MyCargoDetail/_mycargoDetail.scss
+++ b/src/views/MyCargoDetail/_mycargoDetail.scss
@@ -22,6 +22,16 @@
       border-bottom: 1px solid #cfcfcf;
     }
   }
+  .mycargo-desc {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 0;
+    padding: 10px;
+    background: #dad7d0;
+  }
   .order {
     background: #dad7d0;
     color: #000;
