--- a/src/views/MyCargoDetail/_mycargoDetail.scss
+++ b/src/views/MyCargoDetail/_mycargoDetail.scss
@@ -26,6 +26,8 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    right: 0;
+    left: 0;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 0;
