--- a/src/views/Register/_bindView.scss
+++ b/src/views/Register/_bindView.scss
@@ -1,50 +1,72 @@
 .bindView{
 
-    .bind-modal {
-        padding: 25px 25px;
+    .am-list-item {
+        min-height: 60px;
     }
     
+
+    .bind-modal {
+        padding-bottom: 0px;
+        padding-top: 0px;
+        min-height: 60px;
+    }
+
     .verify {
-        position: center;
+        position: absolute;
+        padding: 0;
+        top: 15px;
         right: 10px;
-        font-size: 12px;
-        height: 40px;
+        width: 80px;
+        font-size: 14px;
+        height: 30px;
         line-height: 30px;
         color: #ffa416;
         border-color: #ffa416!important;
         &:after {
             border: 1px solid #ffa416!important;
         }
+        
     }
+
+    .edit {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        line-height: 30px;
+
+    }
+
     .bind-bg {
         position: relative;
-        padding: 25px 25px;
+        padding: 10px 10px;
         background-position: center;
         background-size: cover;
 
     }
     .bind-input {
         position: relative;
-        border-left: 1px solid #ff9305;
-        border-right: 1px solid #ff9305;
-        margin: 8px;
+        border-left: 1px solid #aaa8a5;
+        border-right: 1px solid #aaa8a5;
+        margin: 24px;
         .one {
-            border-top: 1px solid #ff9305;
-            border-bottom: 1px solid #ff9305;
+            border-top: 1px solid #aaa8a5;
+            border-bottom: 1px solid#aaa8a5;
         }
         .two {
-             border-bottom: 1px solid #ff9305;
+             border-bottom: 1px solid#aaa8a5;
         }
     }
 
     .cancel-btn {
         width: 90px;
-        height: 40px;
-        line-height: 40px;
+        height: 30px;
+        line-height: 30px;
         color: #aaa8a5;
         font-size: 16px;
         padding: 0;
-        margin-bottom: 16px;
+        margin-bottom: 8px;
         &:after {
         border: 1px solid #aaa8a5;
         border-radius: 36px;
@@ -54,15 +76,21 @@
 
     .confirm-btn {
         width: 90px;
-        height: 40px;
-        line-height: 40px;
+        height: 30px;
+        line-height: 30px;
         color: #ffaa26;
         font-size: 16px;
         padding: 0;
-        margin-bottom: 16px;
+        margin-bottom: 8px;
         &:after {
         border: 1px solid #ffaa26;
         border-radius: 36px;
         }
     }
 }
+
+  .am-input-control {
+    & > input {
+      border: none;
+    }
+  }
